--- a/languagetool-language-modules/br/src/main/resources/org/languagetool/MessagesBundle_br.properties
+++ b/languagetool-language-modules/br/src/main/resources/org/languagetool/MessagesBundle_br.properties
@@ -362,6 +362,8 @@ loMenuRemoteInfo = Alio\u00f9 gwiria\u00f1 a-bell
 loMenuResetIgnorePermanent = Reset Ignore Permanent
 loMenuEnableBackgroundCheck = Enable background check
 loMenuDisableBackgroundCheck = Disable background check
+loMenuGrammarCheckAgain = Recheck Document
+loMenuNextError = Next spelling or grammar mistake
 loMenuChangeProfiles = Che\u00f1ch ar profil da
 loContextMenuRenewMarkups = Renew grammar markups
 loContextMenuOptions = Dibarzhio\u00f9 LanguageTool
