--- a/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
+++ b/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
@@ -362,6 +362,8 @@ loMenuRemoteInfo = Suggeriment de revisi\u00f3 remota
 loMenuResetIgnorePermanent = Reinicialitza "Ignora de manera permanent"
 loMenuEnableBackgroundCheck = Activa revisi\u00f3 en segon pla
 loMenuDisableBackgroundCheck = Desactiva revisi\u00f3 en segon pla
+loMenuGrammarCheckAgain = Recheck Document
+loMenuNextError = Next spelling or grammar mistake
 loMenuChangeProfiles = Canvia el perfil a
 loContextMenuRenewMarkups = Renova marques de gram\u00e0tica
 loContextMenuOptions = Opcions de LanguageTool
