--- a/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
+++ b/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
@@ -362,6 +362,8 @@ loMenuRemoteInfo = Hinweis zu externer Pr\u00fcfung
 loMenuResetIgnorePermanent = Dauerhaft ignorieren zur\u00fccksetzen
 loMenuEnableBackgroundCheck = Hintergrundpr\u00fcfung einschalten
 loMenuDisableBackgroundCheck = Hintergrundpr\u00fcfung ausschalten
+loMenuGrammarCheckAgain = Dokument erneut pr\u00fcfen
+loMenuNextError = N\u00e4chster Rechtschreib- oder Grammatikfehler
 loMenuChangeProfiles = Profil \u00e4ndern zu
 loContextMenuRenewMarkups = Grammatikmarkierungen erneuern
 loContextMenuOptions = LanguageTool-Optionen
