--- a/languagetool-language-modules/es/src/main/resources/org/languagetool/MessagesBundle_es.properties
+++ b/languagetool-language-modules/es/src/main/resources/org/languagetool/MessagesBundle_es.properties
@@ -362,6 +362,8 @@ loMenuRemoteInfo = Sugerencia de revisi\u00f3n remota
 loMenuResetIgnorePermanent = Reset Ignore Permanent
 loMenuEnableBackgroundCheck = Activar revisi\u00f3n en segundo plano
 loMenuDisableBackgroundCheck = Desactivar revisi\u00f3n en segundo plano
+loMenuGrammarCheckAgain = Recheck Document
+loMenuNextError = Next spelling or grammar mistake
 loMenuChangeProfiles = Modificar el perfil de
 loContextMenuRenewMarkups = Renovar marcas de gram\u00e1tica
 loContextMenuOptions = LanguageTool - Opciones
