--- a/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
+++ b/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
@@ -362,6 +362,8 @@ loMenuRemoteInfo = Indice de v\u00e9rification \u00e0 distance
 loMenuResetIgnorePermanent = R\u00e9initialisation Ignorer en permanence
 loMenuEnableBackgroundCheck = Activer la v\u00e9rification en arri\u00e8re-plan
 loMenuDisableBackgroundCheck = D\u00e9sactiver la v\u00e9rification en arri\u00e8re-plan
+loMenuGrammarCheckAgain = Recheck Document
+loMenuNextError = Next spelling or grammar mistake
 loMenuChangeProfiles = Changer le profil en
 loContextMenuRenewMarkups = Renouveler les marqueurs grammaticaux
 loContextMenuOptions = Options de LanguageTool
