--- a/languagetool-language-modules/gl/src/main/resources/org/languagetool/MessagesBundle_gl.properties
+++ b/languagetool-language-modules/gl/src/main/resources/org/languagetool/MessagesBundle_gl.properties
@@ -362,6 +362,8 @@ loMenuRemoteInfo = Remote Check Hint
 loMenuResetIgnorePermanent = Restaurar Ignorar permanente
 loMenuEnableBackgroundCheck = Activar a correcci\u00f3n en segundo plano
 loMenuDisableBackgroundCheck = Desactivar a correcci\u00f3n en segundo plano
+loMenuGrammarCheckAgain = Recheck Document
+loMenuNextError = Next spelling or grammar mistake
 loMenuChangeProfiles = Cambiar pefil a
 loContextMenuRenewMarkups = Renovar marcaxes gramaticais
 loContextMenuOptions = Opci\u00f3ns de LanguageTool
