--- a/languagetool-language-modules/lt/src/main/resources/org/languagetool/MessagesBundle_lt.properties
+++ b/languagetool-language-modules/lt/src/main/resources/org/languagetool/MessagesBundle_lt.properties
@@ -362,6 +362,8 @@ loMenuRemoteInfo = Remote Check Hint
 loMenuResetIgnorePermanent = Reset Ignore Permanent
 loMenuEnableBackgroundCheck = Enable background check
 loMenuDisableBackgroundCheck = Disable background check
+loMenuGrammarCheckAgain = Recheck Document
+loMenuNextError = Next spelling or grammar mistake
 loMenuChangeProfiles = Change Profile to
 loContextMenuRenewMarkups = Renew grammar markups
 loContextMenuOptions = \u201eLanguageTool\u201c nustatymai
