--- a/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
+++ b/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
@@ -362,6 +362,8 @@ loMenuRemoteInfo = Frj\u00e4rrgranskningstips
 loMenuResetIgnorePermanent = \u00c5terst\u00e4ll ignorera permanent
 loMenuEnableBackgroundCheck = Aktivera granskning i bakgrunden
 loMenuDisableBackgroundCheck = Avaktivera granskning i bakgrunden
+loMenuGrammarCheckAgain = Recheck Document
+loMenuNextError = Next spelling or grammar mistake
 loMenuChangeProfiles = V\u00e4xla profil till
 loContextMenuRenewMarkups = Uppdatera grammatikkontollpunkterna
 loContextMenuOptions = Alternativ f\u00f6r LanguageTool
