--- a/languagetool-language-modules/ar/src/main/resources/org/languagetool/MessagesBundle_ar.properties
+++ b/languagetool-language-modules/ar/src/main/resources/org/languagetool/MessagesBundle_ar.properties
@@ -362,6 +362,8 @@ loMenuRemoteInfo = \u062a\u0644\u0645\u064a\u062d \u062a\u062f\u0642\u064a\u0642
 loMenuResetIgnorePermanent = \u0625\u0639\u0627\u062f\u0629 \u062a\u0639\u064a\u064a\u0646 \u0627\u0644\u062a\u062c\u0627\u0647\u0644 \u0627\u0644\u062f\u0627\u0626\u0645
 loMenuEnableBackgroundCheck = \u062a\u0645\u0643\u064a\u0646 \u0627\u0644\u062a\u062f\u0642\u064a\u0642 \u0641\u064a \u0627\u0644\u062e\u0644\u0641\u064a\u0629
 loMenuDisableBackgroundCheck = \u062a\u0639\u0637\u064a\u0644 \u0627\u0644\u062a\u062f\u0642\u064a\u0642 \u0641\u064a \u0627\u0644\u062e\u0644\u0641\u064a\u0629
+loMenuGrammarCheckAgain = Recheck Document
+loMenuNextError = Next spelling or grammar mistake
 loMenuChangeProfiles = \u063a\u064a\u0651\u0631 \u062d\u0633\u0627\u0628 \u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645 \u0625\u0644\u0649
 loContextMenuRenewMarkups = \u200f \u062a\u062d\u062f\u064a\u062b \u0627\u0644\u0648\u0633\u0648\u0645 \u0627\u0644\u0646\u062d\u0648\u064a\u0629
 loContextMenuOptions = \u062e\u064a\u0627\u0631\u0627\u062a \u0623\u062f\u0627\u0629 \u0627\u0644\u0644\u063a\u0629 LanguageTool
