--- a/languagetool-language-modules/be/src/main/resources/org/languagetool/MessagesBundle_be.properties
+++ b/languagetool-language-modules/be/src/main/resources/org/languagetool/MessagesBundle_be.properties
@@ -362,6 +362,8 @@ loMenuRemoteInfo = \u0410\u0434\u0434\u0430\u043b\u0435\u043d\u0430\u044f \u043f
 loMenuResetIgnorePermanent = Reset Ignore Permanent
 loMenuEnableBackgroundCheck = Enable background check
 loMenuDisableBackgroundCheck = Disable background check
+loMenuGrammarCheckAgain = Recheck Document
+loMenuNextError = Next spelling or grammar mistake
 loMenuChangeProfiles = \u0417\u043c\u044f\u043d\u0456\u0446\u044c \u043f\u0440\u043e\u0444\u0456\u043b\u044c \u043d\u0430
 loContextMenuRenewMarkups = Renew grammar markups
 loContextMenuOptions = \u041f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u044b LanguageTool
