--- a/languagetool-language-modules/el/src/main/resources/org/languagetool/MessagesBundle_el.properties
+++ b/languagetool-language-modules/el/src/main/resources/org/languagetool/MessagesBundle_el.properties
@@ -362,6 +362,8 @@ loMenuRemoteInfo = Remote Check Hint
 loMenuResetIgnorePermanent = Reset Ignore Permanent
 loMenuEnableBackgroundCheck = Enable background check
 loMenuDisableBackgroundCheck = Disable background check
+loMenuGrammarCheckAgain = Recheck Document
+loMenuNextError = Next spelling or grammar mistake
 loMenuChangeProfiles = Change Profile to
 loContextMenuRenewMarkups = Renew grammar markups
 loContextMenuOptions = \u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2 LanguageTool
