--- a/languagetool-language-modules/fa/src/main/resources/org/languagetool/MessagesBundle_fa.properties
+++ b/languagetool-language-modules/fa/src/main/resources/org/languagetool/MessagesBundle_fa.properties
@@ -362,6 +362,8 @@ loMenuRemoteInfo = Remote Check Hint
 loMenuResetIgnorePermanent = Reset Ignore Permanent
 loMenuEnableBackgroundCheck = Enable background check
 loMenuDisableBackgroundCheck = Disable background check
+loMenuGrammarCheckAgain = Recheck Document
+loMenuNextError = Next spelling or grammar mistake
 loMenuChangeProfiles = Change Profile to
 loContextMenuRenewMarkups = Renew grammar markups
 loContextMenuOptions = \u06af\u0632\u06cc\u0646\u0647\u200c\u0647\u0627\u06cc \u0627\u0628\u0632\u0627\u0631 \u0632\u0628\u0627\u0646
