--- a/languagetool-language-modules/nl/src/main/resources/org/languagetool/MessagesBundle_nl.properties
+++ b/languagetool-language-modules/nl/src/main/resources/org/languagetool/MessagesBundle_nl.properties
@@ -362,6 +362,8 @@ loMenuRemoteInfo = Controleer hint op afstand
 loMenuResetIgnorePermanent = Reset Ignore Permanent
 loMenuEnableBackgroundCheck = Enable background check
 loMenuDisableBackgroundCheck = Disable background check
+loMenuGrammarCheckAgain = Recheck Document
+loMenuNextError = Next spelling or grammar mistake
 loMenuChangeProfiles = Wijzig profiel naar
 loContextMenuRenewMarkups = Renew grammar markups
 loContextMenuOptions = LanguageTool-opties
