--- a/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_BR.properties
+++ b/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_BR.properties
@@ -362,6 +362,8 @@ loMenuRemoteInfo = Dica da verifica\u00e7\u00e3o remota
 loMenuResetIgnorePermanent = Reset Ignore Permanent
 loMenuEnableBackgroundCheck = Enable background check
 loMenuDisableBackgroundCheck = Disable background check
+loMenuGrammarCheckAgain = Recheck Document
+loMenuNextError = Next spelling or grammar mistake
 loMenuChangeProfiles = Alterar perfil para
 loContextMenuRenewMarkups = Renew grammar markups
 loContextMenuOptions = Op\u00e7\u00f5es do LanguageTool
