--- a/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_PT.properties
+++ b/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_PT.properties
@@ -362,6 +362,8 @@ loMenuRemoteInfo = Remote Check Hint
 loMenuResetIgnorePermanent = Reset Ignore Permanent
 loMenuEnableBackgroundCheck = Enable background check
 loMenuDisableBackgroundCheck = Disable background check
+loMenuGrammarCheckAgain = Recheck Document
+loMenuNextError = Next spelling or grammar mistake
 loMenuChangeProfiles = Change Profile to
 loContextMenuRenewMarkups = Renew grammar markups
 loContextMenuOptions = Op\u00e7\u00f5es do LanguageTool
