--- a/languagetool-language-modules/ru/src/main/resources/org/languagetool/MessagesBundle_ru.properties
+++ b/languagetool-language-modules/ru/src/main/resources/org/languagetool/MessagesBundle_ru.properties
@@ -362,6 +362,8 @@ loMenuRemoteInfo = \u0423\u0434\u0430\u043b\u0451\u043d\u043d\u0430\u044f \u043f
 loMenuResetIgnorePermanent = \u0412\u043a\u043b\u044e\u0447\u0438\u0442\u044c \u0438\u0433\u043d\u043e\u0440\u0438\u0440\u0443\u0435\u043c\u044b\u0435 \u043f\u0440\u0430\u0432\u0438\u043b\u0430
 loMenuEnableBackgroundCheck = \u0412\u043a\u043b\u044e\u0447\u0438\u0442\u044c \u0444\u043e\u043d\u043e\u0432\u0443\u044e \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0443
 loMenuDisableBackgroundCheck = \u041e\u0442\u043a\u043b\u044e\u0447\u0438\u0442\u044c \u0444\u043e\u043d\u043e\u0432\u0443\u044e \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0443
+loMenuGrammarCheckAgain = Recheck Document
+loMenuNextError = Next spelling or grammar mistake
 loMenuChangeProfiles = \u0418\u0437\u043c\u0435\u043d\u0438\u0442\u044c \u043f\u0440\u043e\u0444\u0438\u043b\u044c \u043d\u0430
 loContextMenuRenewMarkups = \u041e\u0431\u043d\u043e\u0432\u0438\u0442\u044c \u0433\u0440\u0430\u043c\u043c\u0430\u0442\u0438\u0447\u0435\u0441\u043a\u0438\u0435 \u043e\u0442\u043c\u0435\u0442\u043a\u0438
 loContextMenuOptions = \u041f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u044b LanguageTool
