--- a/languagetool-language-modules/ta/src/main/resources/org/languagetool/MessagesBundle_ta.properties
+++ b/languagetool-language-modules/ta/src/main/resources/org/languagetool/MessagesBundle_ta.properties
@@ -362,6 +362,8 @@ loMenuRemoteInfo = Remote Check Hint
 loMenuResetIgnorePermanent = Reset Ignore Permanent
 loMenuEnableBackgroundCheck = Enable background check
 loMenuDisableBackgroundCheck = Disable background check
+loMenuGrammarCheckAgain = Recheck Document
+loMenuNextError = Next spelling or grammar mistake
 loMenuChangeProfiles = Change Profile to
 loContextMenuRenewMarkups = Renew grammar markups
 loContextMenuOptions = LanguageTool \u0ba4\u0bc7\u0bb0\u0bcd\u0bb5\u0bc1\u0b95\u0bb3\u0bcd
