--- a/languagetool-language-modules/uk/src/main/resources/org/languagetool/MessagesBundle_uk.properties
+++ b/languagetool-language-modules/uk/src/main/resources/org/languagetool/MessagesBundle_uk.properties
@@ -362,6 +362,8 @@ loMenuRemoteInfo = \u041f\u0456\u0434\u043a\u0430\u0437\u043a\u0430 \u0432\u0456
 loMenuResetIgnorePermanent = \u0421\u043a\u0438\u043d\u0443\u0442\u0438 \u043f\u043e\u0441\u0442\u0456\u0439\u043d\u043e \u0456\u0433\u043d\u043e\u0440\u043e\u0432\u0430\u043d\u0456
 loMenuEnableBackgroundCheck = \u0423\u0432\u0456\u043c\u043a\u043d\u0443\u0442\u0438 \u0444\u043e\u043d\u043e\u0432\u0443 \u043f\u0435\u0440\u0435\u0432\u0456\u0440\u043a\u0443
 loMenuDisableBackgroundCheck = \u0412\u0438\u043c\u043a\u043d\u0443\u0442\u0438 \u0444\u043e\u043d\u043e\u0432\u0443 \u043f\u0435\u0440\u0435\u0432\u0456\u0440\u043a\u0443
+loMenuGrammarCheckAgain = Recheck Document
+loMenuNextError = Next spelling or grammar mistake
 loMenuChangeProfiles = \u0417\u043c\u0456\u043d\u0438\u0442\u0438 \u043f\u0440\u043e\u0444\u0456\u043b\u044c \u043d\u0430
 loContextMenuRenewMarkups = \u0412\u0456\u0434\u043d\u043e\u0432\u0438\u0442\u0438 \u0433\u0440\u0430\u043c\u0430\u0442\u0438\u0447\u043d\u0456 \u043f\u043e\u0437\u043d\u0430\u0447\u043a\u0438
 loContextMenuOptions = \u041f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u0438 LanguageTool
