--- a/languagetool-language-modules/br/src/main/resources/org/languagetool/MessagesBundle_br.properties
+++ b/languagetool-language-modules/br/src/main/resources/org/languagetool/MessagesBundle_br.properties
@@ -182,6 +182,8 @@ guiTechnicalSettings = Technical settings:
 guiCheckFullTextAtFirst = Gwiria\u00f1 an destenn a-bezh ur wech karget un teuliad
 guiUseLtDictionary = Ouzhpenna\u00f1 geriadur LanguageTool da difazier reizhskrivadurel LibreOffice
 guiNoSynonymsAsSuggestions = Chom hep implijout ar sinonimo\u00f9 evel kinnigo\u00f9 (primoc'h e-ke\u00f1ver un dornad reolenno\u00f9)
+guiIncludeTrackedChanges = Include tracked changes
+guiActivateTempOffRules = Enable temporarily disabled rules
 guiSaveCacheToFile = Save cache to file
 guiUseRemoteServer = Implijout ar servijer a-bell evit gwiria\u00f1 an destenn
 guiUseServer = Implijout ar servijer:
