--- a/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
+++ b/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
@@ -182,6 +182,8 @@ guiTechnicalSettings = Par\u00e0metres t\u00e8cnics:
 guiCheckFullTextAtFirst = Revisa el text complet despr\u00e9s de carregar un document
 guiUseLtDictionary = Afegeix el diccionari de LanguageTool a la revisi\u00f3 ortogr\u00e0fica de LibreOffice
 guiNoSynonymsAsSuggestions = No facis servir sin\u00f2nims com a suggeriments (m\u00e9s r\u00e0pid, sols afecta poques regles)
+guiIncludeTrackedChanges = Include tracked changes
+guiActivateTempOffRules = Enable temporarily disabled rules
 guiSaveCacheToFile = Desa la mem\u00f2ria cau en fitxer
 guiUseRemoteServer = Utilitza un servidor remot per a revisar el text
 guiUseServer = Usa el servidor:
