--- a/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
+++ b/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
@@ -182,6 +182,8 @@ guiTechnicalSettings = Technische Einstellungen:
 guiCheckFullTextAtFirst = Ganzen Text pr\u00fcfen, nachdem Dokument geladen wurde
 guiUseLtDictionary = LanguageTool-W\u00f6rterbuch f\u00fcr LibreOffice-Rechtschreibpr\u00fcfung nutzen
 guiNoSynonymsAsSuggestions = Synonyme nicht als Vorschl\u00e4ge nutzen (schneller)
+guiIncludeTrackedChanges = Verfolgte \u00c4nderungen einschlie\u00dfen
+guiActivateTempOffRules = Vor\u00fcbergehend deaktivierte Regeln einschalten
 guiSaveCacheToFile = In Datei zwischenspeichern
 guiUseRemoteServer = Externen Server zur Textpr\u00fcfung nutzen
 guiUseServer = Server nutzen:
