--- a/languagetool-language-modules/es/src/main/resources/org/languagetool/MessagesBundle_es.properties
+++ b/languagetool-language-modules/es/src/main/resources/org/languagetool/MessagesBundle_es.properties
@@ -182,6 +182,8 @@ guiTechnicalSettings = Ajustes t\u00e9cnicos:
 guiCheckFullTextAtFirst = Revisar el texto completo despu\u00e9s de cargar un documento
 guiUseLtDictionary = A\u00f1adir el diccionario de LanguageTool al corrector ortogr\u00e1fico de LibreOffice
 guiNoSynonymsAsSuggestions = No usar sin\u00f3nimos como sugerencias (m\u00e1s r\u00e1pido, considera solo unas pocas reglas)
+guiIncludeTrackedChanges = Include tracked changes
+guiActivateTempOffRules = Enable temporarily disabled rules
 guiSaveCacheToFile = Guardar cach\u00e9 en archivo
 guiUseRemoteServer = Usar el servidor remoto para revisar el texto
 guiUseServer = Usar el servidor:
