--- a/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
+++ b/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
@@ -182,6 +182,8 @@ guiTechnicalSettings = Param\u00e8tres techniques :
 guiCheckFullTextAtFirst = V\u00e9rification int\u00e9grale du texte apr\u00e8s le t\u00e9l\u00e9chargement d'un document
 guiUseLtDictionary = Ajouter le dictionnaire de LanguageTool \u00e0 la v\u00e9rification d'orthographe de LibreOffice
 guiNoSynonymsAsSuggestions = Ne pas utiliser des synonymes dans les suggestions (plus rapide, ne concerne que quelques r\u00e8gles)
+guiIncludeTrackedChanges = Include tracked changes
+guiActivateTempOffRules = Enable temporarily disabled rules
 guiSaveCacheToFile = Sauvegarder le cache dans un fichier
 guiUseRemoteServer = Utiliser le serveur distant pour v\u00e9rifier le texte
 guiUseServer = Utiliser le serveur :
@@ -362,8 +364,8 @@ loMenuRemoteInfo = Indice de v\u00e9rification \u00e0 distance
 loMenuResetIgnorePermanent = R\u00e9initialisation Ignorer en permanence
 loMenuEnableBackgroundCheck = Activer la v\u00e9rification en arri\u00e8re-plan
 loMenuDisableBackgroundCheck = D\u00e9sactiver la v\u00e9rification en arri\u00e8re-plan
-loMenuGrammarCheckAgain = Recheck Document
-loMenuNextError = Next spelling or grammar mistake
+loMenuGrammarCheckAgain = Rev\u00e9rifier le document
+loMenuNextError = Faute d\u2019orthographe ou de grammaire suivante
 loMenuChangeProfiles = Changer le profil en
 loContextMenuRenewMarkups = Renouveler les marqueurs grammaticaux
 loContextMenuOptions = Options de LanguageTool
