--- a/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_BR.properties
+++ b/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_BR.properties
@@ -182,6 +182,8 @@ guiTechnicalSettings = Technical settings:
 guiCheckFullTextAtFirst = Verificar o texto completo ap\u00f3s carregar um documento
 guiUseLtDictionary = Adicionar o dicion\u00e1rio do LanguageTool ao verificador ortogr\u00e1fico do LibreOffice
 guiNoSynonymsAsSuggestions = N\u00e3o sugerir sin\u00f4nimos (mais r\u00e1pido, apenas para poucas regras)
+guiIncludeTrackedChanges = Include tracked changes
+guiActivateTempOffRules = Enable temporarily disabled rules
 guiSaveCacheToFile = Save cache to file
 guiUseRemoteServer = Usar servidor remoto para verificar o texto
 guiUseServer = Usar servidor:
