--- a/languagetool-language-modules/sl/src/main/resources/org/languagetool/MessagesBundle_sl.properties
+++ b/languagetool-language-modules/sl/src/main/resources/org/languagetool/MessagesBundle_sl.properties
@@ -182,6 +182,8 @@ guiTechnicalSettings = Technical settings:
 guiCheckFullTextAtFirst = Preveri celotno besedilo, ko je dokument nalo\u017een
 guiUseLtDictionary = Dodaj slovar LanguageTool v preverjanje \u010drkovanja LibreOffice
 guiNoSynonymsAsSuggestions = Ne uporabljaj sopomenk za predloge (hitrej\u0161e, upo\u0161teva le nekaj pravil)
+guiIncludeTrackedChanges = Include tracked changes
+guiActivateTempOffRules = Enable temporarily disabled rules
 guiSaveCacheToFile = Save cache to file
 guiUseRemoteServer = Za preverjanje besedila uporabi oddaljeni stre\u017enik
 guiUseServer = Uporabi stre\u017enik:
