--- a/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
+++ b/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
@@ -182,6 +182,8 @@ guiTechnicalSettings = Tekniska inst\u00e4llningar:
 guiCheckFullTextAtFirst = Granska hela texten n\u00e4r dokumentet laddats in
 guiUseLtDictionary = L\u00e4gg till LanguageTool-lexikon till LibreOffices stavningskontroll
 guiNoSynonymsAsSuggestions = Anv\u00e4nd inte synonymer som f\u00f6rslag (snabbare, g\u00e4ller endast n\u00e5gra f\u00e5 regler)
+guiIncludeTrackedChanges = Include tracked changes
+guiActivateTempOffRules = Enable temporarily disabled rules
 guiSaveCacheToFile = Spara cachen till fil
 guiUseRemoteServer = Anv\u00e4nd en fj\u00e4rrserver f\u00f6r spr\u00e5kgranskning
 guiUseServer = Anv\u00e4nd server:
