--- a/languagetool-language-modules/tl/src/main/resources/org/languagetool/MessagesBundle_tl.properties
+++ b/languagetool-language-modules/tl/src/main/resources/org/languagetool/MessagesBundle_tl.properties
@@ -182,6 +182,8 @@ guiTechnicalSettings = Technical settings:
 guiCheckFullTextAtFirst = Check full text after a document is loaded
 guiUseLtDictionary = Add LanguageTool dictionary to LibreOffice spell check
 guiNoSynonymsAsSuggestions = Do not use synonyms as suggestions (faster, regards only few rules)
+guiIncludeTrackedChanges = Include tracked changes
+guiActivateTempOffRules = Enable temporarily disabled rules
 guiSaveCacheToFile = Save cache to file
 guiUseRemoteServer = Use remote server to check text
 guiUseServer = Use server:
