--- a/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
+++ b/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
@@ -184,6 +184,7 @@ guiUseLtDictionary = Afegeix el diccionari de LanguageTool a la revisi\u00f3 ort
 guiNoSynonymsAsSuggestions = No facis servir sin\u00f2nims com a suggeriments (m\u00e9s r\u00e0pid, sols afecta poques regles)
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
+guiEnableGoalSpecificRules = Enable goal specific rules
 guiSaveCacheToFile = Desa la mem\u00f2ria cau en fitxer
 guiUseRemoteServer = Utilitza un servidor remot per a revisar el text
 guiUseServer = Usa el servidor:
