--- a/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
+++ b/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
@@ -183,7 +183,8 @@ guiCheckFullTextAtFirst = V\u00e9rification int\u00e9grale du texte apr\u00e8s l
 guiUseLtDictionary = Ajouter le dictionnaire de LanguageTool \u00e0 la v\u00e9rification d'orthographe de LibreOffice
 guiNoSynonymsAsSuggestions = Ne pas utiliser des synonymes dans les suggestions (plus rapide, ne concerne que quelques r\u00e8gles)
 guiIncludeTrackedChanges = Include tracked changes
-guiActivateTempOffRules = Enable temporarily disabled rules
+guiActivateTempOffRules = Activer les r\u00e8gles temporairement d\u00e9sactiv\u00e9es
+guiEnableGoalSpecificRules = Enable goal specific rules
 guiSaveCacheToFile = Sauvegarder le cache dans un fichier
 guiUseRemoteServer = Utiliser le serveur distant pour v\u00e9rifier le texte
 guiUseServer = Utiliser le serveur :
