--- a/languagetool-language-modules/gl/src/main/resources/org/languagetool/MessagesBundle_gl.properties
+++ b/languagetool-language-modules/gl/src/main/resources/org/languagetool/MessagesBundle_gl.properties
@@ -184,6 +184,7 @@ guiUseLtDictionary = Engadir o dicionario do LanguageTool \u00e1 correcci\u00f3n
 guiNoSynonymsAsSuggestions = Non empregar sin\u00f3nimos como suxesti\u00f3ns (m\u00e1is r\u00e1pido, considera s\u00f3 poucas regras)
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
+guiEnableGoalSpecificRules = Enable goal specific rules
 guiSaveCacheToFile = Gardar a cach\u00e9 nun ficheiro
 guiUseRemoteServer = Empregar servidor remoto para revisar texto
 guiUseServer = Empregar servidor:
