--- a/languagetool-language-modules/pl/src/main/resources/org/languagetool/MessagesBundle_pl.properties
+++ b/languagetool-language-modules/pl/src/main/resources/org/languagetool/MessagesBundle_pl.properties
@@ -184,6 +184,7 @@ guiUseLtDictionary = Add LanguageTool dictionary to LibreOffice spell check
 guiNoSynonymsAsSuggestions = Do not use synonyms as suggestions (faster, regards only few rules)
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
+guiEnableGoalSpecificRules = Enable goal specific rules
 guiSaveCacheToFile = Zapisz pami\u0119\u0107 podr\u0119czn\u0105 do pliku
 guiUseRemoteServer = Use remote server to check text
 guiUseServer = Use server:
