--- a/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_BR.properties
+++ b/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_BR.properties
@@ -184,6 +184,7 @@ guiUseLtDictionary = Adicionar o dicion\u00e1rio do LanguageTool ao verificador 
 guiNoSynonymsAsSuggestions = N\u00e3o sugerir sin\u00f4nimos (mais r\u00e1pido, apenas para poucas regras)
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
+guiEnableGoalSpecificRules = Enable goal specific rules
 guiSaveCacheToFile = Save cache to file
 guiUseRemoteServer = Usar servidor remoto para verificar o texto
 guiUseServer = Usar servidor:
