--- a/languagetool-language-modules/ar/src/main/resources/org/languagetool/MessagesBundle_ar.properties
+++ b/languagetool-language-modules/ar/src/main/resources/org/languagetool/MessagesBundle_ar.properties
@@ -184,6 +184,7 @@ guiUseLtDictionary = \u0623\u0636\u0641 \u0642\u0627\u0645\u0648\u0633 \u0623\u0
 guiNoSynonymsAsSuggestions = \u0644\u0627 \u062a\u0633\u062a\u062e\u062f\u0645 \u0627\u0644\u0645\u062a\u0631\u0627\u062f\u0641\u0627\u062a \u0627\u0642\u062a\u0631\u0627\u062d\u0627\u062a\u064d (\u0623\u0633\u0631\u0639\u060c \u064a\u0623\u062e\u0630 \u0641\u064a \u0627\u0644\u062d\u0633\u0628\u0627\u0646 \u0628\u0636\u0639\u0629 \u0642\u0648\u0627\u0639\u062f \u0641\u062d\u0633\u0628)
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
+guiEnableGoalSpecificRules = Enable goal specific rules
 guiSaveCacheToFile = \u0627\u062d\u0641\u0638 \u0627\u0644\u062e\u0628\u064a\u0626\u0629 \u0641\u064a \u0645\u0650\u0644\u0641
 guiUseRemoteServer = \u0627\u0633\u062a\u062e\u062f\u0645 \u0627\u0644\u062e\u0627\u062f\u0648\u0645 \u0627\u0644\u0628\u0639\u064a\u062f \u0644\u062a\u062f\u0642\u064a\u0642 \u0627\u0644\u0646\u0635
 guiUseServer = \u0627\u0633\u062a\u062e\u062f\u0645 \u0627\u0644\u062e\u0627\u062f\u0648\u0645:
