--- a/languagetool-language-modules/be/src/main/resources/org/languagetool/MessagesBundle_be.properties
+++ b/languagetool-language-modules/be/src/main/resources/org/languagetool/MessagesBundle_be.properties
@@ -184,6 +184,7 @@ guiUseLtDictionary = \u0414\u0430\u0434\u0430\u0446\u044c \u0441\u043b\u043e\u04
 guiNoSynonymsAsSuggestions = \u041d\u0435 \u0432\u044b\u043a\u0430\u0440\u044b\u0441\u0442\u043e\u045e\u0432\u0430\u0446\u044c \u0441\u0456\u043d\u043e\u043d\u0456\u043c\u044b \u045e \u044f\u043a\u0430\u0441\u0446\u0456 \u043f\u0440\u0430\u043f\u0430\u043d\u043e\u045e (\u0445\u0443\u0442\u0447\u044d\u0439, \u0434\u0430\u0442\u044b\u0447\u044b\u0446\u0446\u0430 \u0442\u043e\u043b\u044c\u043a\u0456 \u043d\u0435\u043a\u0430\u0442\u043e\u0440\u044b\u0445 \u043f\u0440\u0430\u0432\u0456\u043b\u0430\u045e)
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
+guiEnableGoalSpecificRules = Enable goal specific rules
 guiSaveCacheToFile = Save cache to file
 guiUseRemoteServer = \u0412\u044b\u043a\u0430\u0440\u044b\u0441\u0442\u043e\u045e\u0432\u0430\u0446\u044c \u0430\u0434\u0434\u0430\u043b\u0435\u043d\u044b \u0441\u0435\u0440\u0432\u0435\u0440 \u0434\u043b\u044f \u043f\u0440\u0430\u0432\u0435\u0440\u043a\u0456 \u0442\u044d\u043a\u0441\u0442\u0443
 guiUseServer = \u0412\u044b\u043a\u0430\u0440\u044b\u0441\u0442\u043e\u045e\u0432\u0430\u0446\u044c \u0441\u0435\u0440\u0432\u0435\u0440:
