--- a/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
+++ b/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
@@ -184,6 +184,7 @@ guiUseLtDictionary = LanguageTool-W\u00f6rterbuch f\u00fcr LibreOffice-Rechtschr
 guiNoSynonymsAsSuggestions = Synonyme nicht als Vorschl\u00e4ge nutzen (schneller)
 guiIncludeTrackedChanges = Verfolgte \u00c4nderungen einschlie\u00dfen
 guiActivateTempOffRules = Vor\u00fcbergehend deaktivierte Regeln einschalten
+guiEnableGoalSpecificRules = Zielspezifische Regeln einschalten
 guiSaveCacheToFile = In Datei zwischenspeichern
 guiUseRemoteServer = Externen Server zur Textpr\u00fcfung nutzen
 guiUseServer = Server nutzen:
