--- a/languagetool-language-modules/lt/src/main/resources/org/languagetool/MessagesBundle_lt.properties
+++ b/languagetool-language-modules/lt/src/main/resources/org/languagetool/MessagesBundle_lt.properties
@@ -184,6 +184,7 @@ guiUseLtDictionary = Add LanguageTool dictionary to LibreOffice spell check
 guiNoSynonymsAsSuggestions = Do not use synonyms as suggestions (faster, regards only few rules)
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
+guiEnableGoalSpecificRules = Enable goal specific rules
 guiSaveCacheToFile = Save cache to file
 guiUseRemoteServer = Use remote server to check text
 guiUseServer = Use server:
