--- a/languagetool-language-modules/nl/src/main/resources/org/languagetool/MessagesBundle_nl.properties
+++ b/languagetool-language-modules/nl/src/main/resources/org/languagetool/MessagesBundle_nl.properties
@@ -184,6 +184,7 @@ guiUseLtDictionary = Voeg het woordenboek van LanguageTool toe aan LibreOffice
 guiNoSynonymsAsSuggestions = Gebruik geen synoniemen voor suggesties (sneller, betreft enkele regels)
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
+guiEnableGoalSpecificRules = Enable goal specific rules
 guiSaveCacheToFile = Sla cache op als bestand
 guiUseRemoteServer = Gebruiker remote server om text te controleren
 guiUseServer = Gebruik server:
