--- a/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
+++ b/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
@@ -131,6 +131,7 @@ guiOOoCheckAllButton = Tot
 guiOOoCheckSpellingButton = Sols ortografia
 # is part of selection: Check: All | Only Spelling | Only Grammar
 guiOOoCheckGrammarButton = Sols gram\u00e0tica
+guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = Inhabilita la regla
 guiOOoOptionsButton = Opcions...
 guiOOoCheckDialogName = Di\u00e0leg de revisi\u00f3 ortogr\u00e0fica i gramatical
