--- a/languagetool-language-modules/da/src/main/resources/org/languagetool/MessagesBundle_da.properties
+++ b/languagetool-language-modules/da/src/main/resources/org/languagetool/MessagesBundle_da.properties
@@ -131,6 +131,7 @@ guiOOoCheckAllButton = All
 guiOOoCheckSpellingButton = Only Spelling
 # is part of selection: Check: All | Only Spelling | Only Grammar
 guiOOoCheckGrammarButton = Only Grammar
+guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = Sl\u00e5 reglen fra
 guiOOoOptionsButton = In&dstillinger...
 guiOOoCheckDialogName = Spell and Grammar Check Dialog
