--- a/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
+++ b/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
@@ -131,6 +131,7 @@ guiOOoCheckAllButton = Alles
 guiOOoCheckSpellingButton = Nur Rechtschreibung
 # is part of selection: Check: All | Only Spelling | Only Grammar
 guiOOoCheckGrammarButton = Nur Grammatik
+guiOOoCheckOnlyRuleButton = Einzige Regel
 guiTurnOffRule = Regel deaktivieren
 guiOOoOptionsButton = Optionen...
 guiOOoCheckDialogName = Dialog zur Rechtschreib- und Grammatikpr\u00fcfung
