--- a/languagetool-language-modules/es/src/main/resources/org/languagetool/MessagesBundle_es.properties
+++ b/languagetool-language-modules/es/src/main/resources/org/languagetool/MessagesBundle_es.properties
@@ -131,6 +131,7 @@ guiOOoCheckAllButton = Todo
 guiOOoCheckSpellingButton = Solo ortograf\u00eda
 # is part of selection: Check: All | Only Spelling | Only Grammar
 guiOOoCheckGrammarButton = Solo gram\u00e1tica
+guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = Desactivar regla
 guiOOoOptionsButton = Opciones...
 guiOOoCheckDialogName = Di\u00e1logo de revisi\u00f3n ortogr\u00e1fica y gramatical
