--- a/languagetool-language-modules/gl/src/main/resources/org/languagetool/MessagesBundle_gl.properties
+++ b/languagetool-language-modules/gl/src/main/resources/org/languagetool/MessagesBundle_gl.properties
@@ -131,6 +131,7 @@ guiOOoCheckAllButton = Todo
 guiOOoCheckSpellingButton = S\u00f3 a ortograf\u00eda
 # is part of selection: Check: All | Only Spelling | Only Grammar
 guiOOoCheckGrammarButton = S\u00f3 a gram\u00e1tica
+guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = Desactivar regra
 guiOOoOptionsButton = Opci\u00f3ns...
 guiOOoCheckDialogName = Caixa de di\u00e1logo de correcci\u00f3n ortogr\u00e1fica e gramatical
