--- a/languagetool-language-modules/it/src/main/resources/org/languagetool/MessagesBundle_it.properties
+++ b/languagetool-language-modules/it/src/main/resources/org/languagetool/MessagesBundle_it.properties
@@ -131,6 +131,7 @@ guiOOoCheckAllButton = All
 guiOOoCheckSpellingButton = Only Spelling
 # is part of selection: Check: All | Only Spelling | Only Grammar
 guiOOoCheckGrammarButton = Only Grammar
+guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = Disabilita la Regola
 guiOOoOptionsButton = Opzioni...
 guiOOoCheckDialogName = Spell and Grammar Check Dialog
