--- a/languagetool-language-modules/km/src/main/resources/org/languagetool/MessagesBundle_km.properties
+++ b/languagetool-language-modules/km/src/main/resources/org/languagetool/MessagesBundle_km.properties
@@ -131,6 +131,7 @@ guiOOoCheckAllButton = All
 guiOOoCheckSpellingButton = Only Spelling
 # is part of selection: Check: All | Only Spelling | Only Grammar
 guiOOoCheckGrammarButton = Only Grammar
+guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = Turn off Rule
 guiOOoOptionsButton = \u1787\u1798\u17d2\u179a\u17be\u179f
 guiOOoCheckDialogName = Spell and Grammar Check Dialog
