--- a/languagetool-language-modules/lt/src/main/resources/org/languagetool/MessagesBundle_lt.properties
+++ b/languagetool-language-modules/lt/src/main/resources/org/languagetool/MessagesBundle_lt.properties
@@ -131,6 +131,7 @@ guiOOoCheckAllButton = All
 guiOOoCheckSpellingButton = Only Spelling
 # is part of selection: Check: All | Only Spelling | Only Grammar
 guiOOoCheckGrammarButton = Only Grammar
+guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = I\u0161jungti taisykl\u0119
 guiOOoOptionsButton = Parametrai...
 guiOOoCheckDialogName = Spell and Grammar Check Dialog
