--- a/languagetool-language-modules/pl/src/main/resources/org/languagetool/MessagesBundle_pl.properties
+++ b/languagetool-language-modules/pl/src/main/resources/org/languagetool/MessagesBundle_pl.properties
@@ -131,6 +131,7 @@ guiOOoCheckAllButton = Wszystko
 guiOOoCheckSpellingButton = Tylko pisowni\u0119
 # is part of selection: Check: All | Only Spelling | Only Grammar
 guiOOoCheckGrammarButton = Tylko gramatyk\u0119
+guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = Wy\u0142\u0105cz regu\u0142\u0119
 guiOOoOptionsButton = &Opcje...
 guiOOoCheckDialogName = Okno dialogowe korekty pisowni i gramatyki
