--- a/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
+++ b/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
@@ -131,6 +131,7 @@ guiOOoCheckAllButton = Allt
 guiOOoCheckSpellingButton = Endast stavning
 # is part of selection: Check: All | Only Spelling | Only Grammar
 guiOOoCheckGrammarButton = Endast grammatik
+guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = Inaktivera regel
 guiOOoOptionsButton = Alternativ ...
 guiOOoCheckDialogName = Granska grammatik och stavning
