--- a/languagetool-language-modules/ta/src/main/resources/org/languagetool/MessagesBundle_ta.properties
+++ b/languagetool-language-modules/ta/src/main/resources/org/languagetool/MessagesBundle_ta.properties
@@ -131,6 +131,7 @@ guiOOoCheckAllButton = All
 guiOOoCheckSpellingButton = Only Spelling
 # is part of selection: Check: All | Only Spelling | Only Grammar
 guiOOoCheckGrammarButton = Only Grammar
+guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = \u0bb5\u0bbf\u0ba4\u0bbf\u0baf\u0bc8 \u0b85\u0b9f\u0bc8
 guiOOoOptionsButton = \u0ba4\u0bc7\u0bb0\u0bcd\u0bb5\u0bc1\u0b95\u0bb3\u0bcd...
 guiOOoCheckDialogName = Spell and Grammar Check Dialog
