--- a/languagetool-language-modules/zh/src/main/resources/org/languagetool/MessagesBundle_zh.properties
+++ b/languagetool-language-modules/zh/src/main/resources/org/languagetool/MessagesBundle_zh.properties
@@ -131,6 +131,7 @@ guiOOoCheckAllButton = All
 guiOOoCheckSpellingButton = Only Spelling
 # is part of selection: Check: All | Only Spelling | Only Grammar
 guiOOoCheckGrammarButton = Only Grammar
+guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = Turn off Rule
 guiOOoOptionsButton = \u9009\u9879...
 guiOOoCheckDialogName = Spell and Grammar Check Dialog
