--- a/languagetool-language-modules/ar/src/main/resources/org/languagetool/MessagesBundle_ar.properties
+++ b/languagetool-language-modules/ar/src/main/resources/org/languagetool/MessagesBundle_ar.properties
@@ -131,6 +131,7 @@ guiOOoCheckAllButton = \u0627\u0644\u0643\u0644
 guiOOoCheckSpellingButton = \u0627\u0644\u0625\u0645\u0644\u0627\u0621 \u0641\u0642\u0637
 # is part of selection: Check: All | Only Spelling | Only Grammar
 guiOOoCheckGrammarButton = \u0627\u0644\u0646\u062d\u0648 \u0641\u0642\u0637
+guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = \u0639\u0637\u0651\u0644 \u0627\u0644\u0642\u0627\u0639\u062f\u0629
 guiOOoOptionsButton = \u062e\u064a\u0627\u0631\u0627\u062a...
 guiOOoCheckDialogName = \u062d\u0648\u0627\u0631 \u062a\u062f\u0642\u064a\u0642 \u0627\u0644\u0625\u0645\u0644\u0627\u0621 \u0648\u0627\u0644\u0646\u062d\u0648
