--- a/languagetool-language-modules/be/src/main/resources/org/languagetool/MessagesBundle_be.properties
+++ b/languagetool-language-modules/be/src/main/resources/org/languagetool/MessagesBundle_be.properties
@@ -131,6 +131,7 @@ guiOOoCheckAllButton = \u0423\u0441\u0451
 guiOOoCheckSpellingButton = \u0422\u043e\u043b\u044c\u043a\u0456 \u043f\u0440\u0430\u0432\u0430\u043f\u0456\u0441
 # is part of selection: Check: All | Only Spelling | Only Grammar
 guiOOoCheckGrammarButton = \u0422\u043e\u043b\u044c\u043a\u0456 \u0433\u0440\u0430\u043c\u0430\u0442\u044b\u043a\u0443
+guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = \u0410\u0434\u043a\u043b\u044e\u0447\u044b\u0446\u044c \u043f\u0440\u0430\u0432\u0456\u043b\u0430
 guiOOoOptionsButton = \u041f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u044b...
 guiOOoCheckDialogName = Spell and Grammar Check Dialog
