--- a/languagetool-language-modules/el/src/main/resources/org/languagetool/MessagesBundle_el.properties
+++ b/languagetool-language-modules/el/src/main/resources/org/languagetool/MessagesBundle_el.properties
@@ -131,6 +131,7 @@ guiOOoCheckAllButton = All
 guiOOoCheckSpellingButton = Only Spelling
 # is part of selection: Check: All | Only Spelling | Only Grammar
 guiOOoCheckGrammarButton = Only Grammar
+guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = \u0391\u03c0\u03b5\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7 \u03ba\u03b1\u03bd\u03cc\u03bd\u03b1
 guiOOoOptionsButton = \u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2...
 guiOOoCheckDialogName = Spell and Grammar Check Dialog
