--- a/languagetool-language-modules/fa/src/main/resources/org/languagetool/MessagesBundle_fa.properties
+++ b/languagetool-language-modules/fa/src/main/resources/org/languagetool/MessagesBundle_fa.properties
@@ -131,6 +131,7 @@ guiOOoCheckAllButton = All
 guiOOoCheckSpellingButton = Only Spelling
 # is part of selection: Check: All | Only Spelling | Only Grammar
 guiOOoCheckGrammarButton = Only Grammar
+guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = \u062e\u0627\u0645\u0648\u0634\u200c\u06a9\u0631\u062f\u0646 \u0642\u0627\u0639\u062f\u0647
 guiOOoOptionsButton = \u06af\u0632\u06cc\u0646\u0647\u200c\u0647\u0627...
 guiOOoCheckDialogName = Spell and Grammar Check Dialog
