--- a/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
+++ b/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
@@ -131,6 +131,7 @@ guiOOoCheckAllButton = Tout
 guiOOoCheckSpellingButton = Uniquement l'orthographe
 # is part of selection: Check: All | Only Spelling | Only Grammar
 guiOOoCheckGrammarButton = Uniquement la grammaire
+guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = D\u00e9sactiver la r\u00e8gle
 guiOOoOptionsButton = Options...
 guiOOoCheckDialogName = Dialogue de v\u00e9rification d'orthographe et de grammaire
