--- a/languagetool-language-modules/nl/src/main/resources/org/languagetool/MessagesBundle_nl.properties
+++ b/languagetool-language-modules/nl/src/main/resources/org/languagetool/MessagesBundle_nl.properties
@@ -131,6 +131,7 @@ guiOOoCheckAllButton = All
 guiOOoCheckSpellingButton = Only Spelling
 # is part of selection: Check: All | Only Spelling | Only Grammar
 guiOOoCheckGrammarButton = Only Grammar
+guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = Zet regel uit
 guiOOoOptionsButton = Opties...
 guiOOoCheckDialogName = Controlescherm
