--- a/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_BR.properties
+++ b/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_BR.properties
@@ -131,6 +131,7 @@ guiOOoCheckAllButton = All
 guiOOoCheckSpellingButton = Only Spelling
 # is part of selection: Check: All | Only Spelling | Only Grammar
 guiOOoCheckGrammarButton = Only Grammar
+guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = Desligar regra
 guiOOoOptionsButton = Op\u00e7\u00f5es...
 guiOOoCheckDialogName = Spell and Grammar Check Dialog
