--- a/languagetool-language-modules/sk/src/main/resources/org/languagetool/MessagesBundle_sk.properties
+++ b/languagetool-language-modules/sk/src/main/resources/org/languagetool/MessagesBundle_sk.properties
@@ -131,6 +131,7 @@ guiOOoCheckAllButton = All
 guiOOoCheckSpellingButton = Only Spelling
 # is part of selection: Check: All | Only Spelling | Only Grammar
 guiOOoCheckGrammarButton = Only Grammar
+guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = Vypn\u00fa\u0165 pravidlo
 guiOOoOptionsButton = Nastavenia...
 guiOOoCheckDialogName = Spell and Grammar Check Dialog
