--- a/languagetool-language-modules/uk/src/main/resources/org/languagetool/MessagesBundle_uk.properties
+++ b/languagetool-language-modules/uk/src/main/resources/org/languagetool/MessagesBundle_uk.properties
@@ -131,6 +131,7 @@ guiOOoCheckAllButton = \u0412\u0441\u0435
 guiOOoCheckSpellingButton = \u041b\u0438\u0448\u0435 \u043e\u0440\u0444\u043e\u0433\u0440\u0430\u0444\u0456\u044e
 # is part of selection: Check: All | Only Spelling | Only Grammar
 guiOOoCheckGrammarButton = \u041b\u0438\u0448\u0435 \u0433\u0440\u0430\u043c\u0430\u0442\u0438\u043a\u0443
+guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = \u0412\u0438\u043c\u043a\u043d\u0443\u0442\u0438 \u043f\u0440\u0430\u0432\u0438\u043b\u043e
 guiOOoOptionsButton = \u041f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u0438...
 guiOOoCheckDialogName = \u0414\u0456\u0430\u043b\u043e\u0433 \u043f\u0435\u0440\u0435\u0432\u0456\u0440\u043a\u0438 \u043e\u0440\u0444\u043e\u0433\u0440\u0430\u0444\u0456\u0457 \u0442\u0430 \u0433\u0440\u0430\u043c\u0430\u0442\u0438\u043a\u0438
