[de] added words + gGEC AP + exceptions + improved message

--- a/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
+++ b/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
@@ -244,7 +244,7 @@ textLanguage = Textsprache:
 two_commas = Zwei aufeinanderfolgende Kommas
 two_dots = Zwei aufeinanderfolgende Punkte
 uk = Ukrainisch
-unpaired_brackets = Zeichen ohne sein Gegenst\u00fcck: ''{0}'' scheint zu fehlen
+unpaired_brackets = Zeichen ohne sein Gegenst\u00fcck ''{0}'' scheint zu fehlen
 useGUIConfig = Obige Einstellungen auch f\u00fcr den Server benutzen
 whitespace_repetition = M\u00f6glicher Tippfehler: mehr als ein Leerzeichen hintereinander
 ro = Rum\u00e4nisch
