LongParagraphRule: change mark from one word to two / correct false text for user options

--- a/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
+++ b/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
@@ -200,7 +200,7 @@ guiPremiumUsername =  User name:
 guiPremiumApiKey =  API Key:
 guiStyleRepeatedWordText = Maximum distance between two repeated words (0 - 5 sentences):
 guiLongSentencesText = Maximum sentences length (5 - 100 words):
-guiLongParagraphsText = Maximum paragraphs length (5 - 200 words):
+guiLongParagraphsText = Maximum paragraphs length (5 - {0} words):
 guiUnderlineColor = Underline Color of Category
 guiUColorHint = Underline colors are supported by LibreOffice version 6.2.0 and higher
 guiUColorHint1 = Underline types are supported by LibreOffice version 6.3.0 and higher
