--- a/languagetool-core/src/main/resources/org/languagetool/MessagesBundle_en.properties
+++ b/languagetool-core/src/main/resources/org/languagetool/MessagesBundle_en.properties
@@ -199,7 +199,7 @@ guiStyleRepeatedWordText = Maximum distance between two repeated words (0 - 5 se
 guiUsePremiumAccount = Use premium account (for premium user)
 guiLongSentencesText = Maximum sentences length (5 - 100 words):
 guiPremiumUsername = User name:
-guiLongParagraphsText = Maximum paragraphs length (5 - 200 words):
+guiLongParagraphsText = Maximum paragraphs length (5 - {0} words):
 guiPremiumApiKey = API Key:
 guiUnderlineColor = Underline Color of Category
 guiUColorHint = Underline colors are supported by LibreOffice version 6.2.0 and higher
