--- a/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
+++ b/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
@@ -199,7 +199,7 @@ guiStyleRepeatedWordText = Maximaler Abstand zwischen zwei wiederholten\nW\u00f6
 guiUsePremiumAccount = Premium-Konto verwenden (f\u00fcr Premium-Nutzer)
 guiLongSentencesText = Maximale Satzl\u00e4nge (5 - 100 W\u00f6rter):
 guiPremiumUsername = Nutzername:
-guiLongParagraphsText = Maximale Absatzl\u00e4nge (5 - 200 W\u00f6rter):
+guiLongParagraphsText = Maximale Absatzl\u00e4nge (5 - {0} W\u00f6rter):
 guiPremiumApiKey = API-Schl\u00fcssel:
 guiUnderlineColor = Farbe der Unterstreichung der Kategorie
 guiUColorHint = Farbige Unterstreichungen werden seit LibreOffice 6.2.0 unterst\u00fctzt
