--- a/languagetool-language-modules/br/src/main/resources/org/languagetool/MessagesBundle_br.properties
+++ b/languagetool-language-modules/br/src/main/resources/org/languagetool/MessagesBundle_br.properties
@@ -188,6 +188,7 @@ guiNoSynonymsAsSuggestions = Chom hep implijout ar sinonimo\u00f9 evel kinnigo\u
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
 guiEnableGoalSpecificRules = Enable goal specific rules
+guiFilterOverlappingMatches = Filter overlapping matches
 guiSaveCacheToFile = Save cache to file
 guiUseRemoteServer = Implijout ar servijer a-bell evit gwiria\u00f1 an destenn
 guiUseServer = Implijout ar servijer:
