--- a/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
+++ b/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
@@ -188,6 +188,7 @@ guiNoSynonymsAsSuggestions = No facis servir sin\u00f2nims com a suggeriments (m
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
 guiEnableGoalSpecificRules = Enable goal specific rules
+guiFilterOverlappingMatches = Filter overlapping matches
 guiSaveCacheToFile = Desa la mem\u00f2ria cau en fitxer
 guiUseRemoteServer = Utilitza un servidor remot per a revisar el text
 guiUseServer = Usa el servidor:
