--- a/languagetool-language-modules/es/src/main/resources/org/languagetool/MessagesBundle_es.properties
+++ b/languagetool-language-modules/es/src/main/resources/org/languagetool/MessagesBundle_es.properties
@@ -188,6 +188,7 @@ guiNoSynonymsAsSuggestions = No usar sin\u00f3nimos como sugerencias (m\u00e1s r
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
 guiEnableGoalSpecificRules = Enable goal specific rules
+guiFilterOverlappingMatches = Filter overlapping matches
 guiSaveCacheToFile = Guardar cach\u00e9 en archivo
 guiUseRemoteServer = Usar el servidor remoto para revisar el texto
 guiUseServer = Usar el servidor:
