--- a/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
+++ b/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
@@ -188,6 +188,7 @@ guiNoSynonymsAsSuggestions = Ne pas utiliser des synonymes dans les suggestions 
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Activer les r\u00e8gles temporairement d\u00e9sactiv\u00e9es
 guiEnableGoalSpecificRules = Enable goal specific rules
+guiFilterOverlappingMatches = Filter overlapping matches
 guiSaveCacheToFile = Sauvegarder le cache dans un fichier
 guiUseRemoteServer = Utiliser le serveur distant pour v\u00e9rifier le texte
 guiUseServer = Utiliser le serveur :
