--- a/languagetool-language-modules/gl/src/main/resources/org/languagetool/MessagesBundle_gl.properties
+++ b/languagetool-language-modules/gl/src/main/resources/org/languagetool/MessagesBundle_gl.properties
@@ -188,6 +188,7 @@ guiNoSynonymsAsSuggestions = Non empregar sin\u00f3nimos como suxesti\u00f3ns (m
 guiIncludeTrackedChanges = Inclu\u00edr cambios seguidos
 guiActivateTempOffRules = Activar regras desactivadas temporalmente
 guiEnableGoalSpecificRules = Activar regras espec\u00edficas do obxectivo
+guiFilterOverlappingMatches = Filter overlapping matches
 guiSaveCacheToFile = Gardar a cach\u00e9 nun ficheiro
 guiUseRemoteServer = Empregar servidor remoto para revisar texto
 guiUseServer = Empregar servidor:
