--- a/languagetool-language-modules/nl/src/main/resources/org/languagetool/MessagesBundle_nl.properties
+++ b/languagetool-language-modules/nl/src/main/resources/org/languagetool/MessagesBundle_nl.properties
@@ -188,6 +188,7 @@ guiNoSynonymsAsSuggestions = Gebruik geen synoniemen voor suggesties (sneller, b
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
 guiEnableGoalSpecificRules = Enable goal specific rules
+guiFilterOverlappingMatches = Filter overlapping matches
 guiSaveCacheToFile = Sla cache op als bestand
 guiUseRemoteServer = Gebruiker remote server om text te controleren
 guiUseServer = Gebruik server:
