--- a/languagetool-language-modules/pl/src/main/resources/org/languagetool/MessagesBundle_pl.properties
+++ b/languagetool-language-modules/pl/src/main/resources/org/languagetool/MessagesBundle_pl.properties
@@ -188,6 +188,7 @@ guiNoSynonymsAsSuggestions = Do not use synonyms as suggestions (faster, regards
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
 guiEnableGoalSpecificRules = Enable goal specific rules
+guiFilterOverlappingMatches = Filter overlapping matches
 guiSaveCacheToFile = Zapisz pami\u0119\u0107 podr\u0119czn\u0105 do pliku
 guiUseRemoteServer = Use remote server to check text
 guiUseServer = Use server:
