--- a/languagetool-language-modules/sl/src/main/resources/org/languagetool/MessagesBundle_sl.properties
+++ b/languagetool-language-modules/sl/src/main/resources/org/languagetool/MessagesBundle_sl.properties
@@ -188,6 +188,7 @@ guiNoSynonymsAsSuggestions = Ne uporabljaj sopomenk za predloge (hitrej\u0161e, 
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
 guiEnableGoalSpecificRules = Enable goal specific rules
+guiFilterOverlappingMatches = Filter overlapping matches
 guiSaveCacheToFile = Save cache to file
 guiUseRemoteServer = Za preverjanje besedila uporabi oddaljeni stre\u017enik
 guiUseServer = Uporabi stre\u017enik:
