--- a/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
+++ b/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
@@ -188,6 +188,7 @@ guiNoSynonymsAsSuggestions = Anv\u00e4nd inte synonymer som f\u00f6rslag (snabba
 guiIncludeTrackedChanges = Inkludera sp\u00e5rade \u00e4ndringar
 guiActivateTempOffRules = Aktivera tillf\u00e4lligt avst\u00e4ngda regler
 guiEnableGoalSpecificRules = Aktivera m\u00e5lspecifika regler
+guiFilterOverlappingMatches = Filter overlapping matches
 guiSaveCacheToFile = Spara cachen till fil
 guiUseRemoteServer = Anv\u00e4nd en fj\u00e4rrserver f\u00f6r spr\u00e5kgranskning
 guiUseServer = Anv\u00e4nd server:
