--- a/languagetool-language-modules/be/src/main/resources/org/languagetool/MessagesBundle_be.properties
+++ b/languagetool-language-modules/be/src/main/resources/org/languagetool/MessagesBundle_be.properties
@@ -188,6 +188,7 @@ guiNoSynonymsAsSuggestions = \u041d\u0435 \u0432\u044b\u043a\u0430\u0440\u044b\u
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
 guiEnableGoalSpecificRules = Enable goal specific rules
+guiFilterOverlappingMatches = Filter overlapping matches
 guiSaveCacheToFile = Save cache to file
 guiUseRemoteServer = \u0412\u044b\u043a\u0430\u0440\u044b\u0441\u0442\u043e\u045e\u0432\u0430\u0446\u044c \u0430\u0434\u0434\u0430\u043b\u0435\u043d\u044b \u0441\u0435\u0440\u0432\u0435\u0440 \u0434\u043b\u044f \u043f\u0440\u0430\u0432\u0435\u0440\u043a\u0456 \u0442\u044d\u043a\u0441\u0442\u0443
 guiUseServer = \u0412\u044b\u043a\u0430\u0440\u044b\u0441\u0442\u043e\u045e\u0432\u0430\u0446\u044c \u0441\u0435\u0440\u0432\u0435\u0440:
