--- a/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_BR.properties
+++ b/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_BR.properties
@@ -188,6 +188,7 @@ guiNoSynonymsAsSuggestions = N\u00e3o sugerir sin\u00f4nimos (mais r\u00e1pido, 
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
 guiEnableGoalSpecificRules = Enable goal specific rules
+guiFilterOverlappingMatches = Filter overlapping matches
 guiSaveCacheToFile = Save cache to file
 guiUseRemoteServer = Usar servidor remoto para verificar o texto
 guiUseServer = Usar servidor:
@@ -329,8 +330,8 @@ whitespace_at_begin_parapgraph_msg = Por favor delete o caractere de espa\u00e7o
 repetition_paragraph_beginning_desc = Mesmo come\u00e7o do par\u00e1grafo
 repetition_paragraph_beginning_last_msg = Mesmo come\u00e7o que o \u00faltimo par\u00e1grafo
 repetition_paragraph_beginning_next_msg = Mesmo come\u00e7o que o pr\u00f3ximo par\u00e1grafo
-punctuation_mark_paragraph_end_desc = Nenhuma pontua\u00e7\u00e3o no fim do par\u00e1grafo
-punctuation_mark_paragraph_end_msg = Por favor adicione uma pontua\u00e7\u00e3o ao fim do par\u00e1grafo.
+punctuation_mark_paragraph_end_desc = Final de par\u00e1grafo sem sinal de pontua\u00e7\u00e3o
+punctuation_mark_paragraph_end_msg = Considere pontuar o final do par\u00e1grafo.
 guiLookAndFeelMenu = Apar\u00eancia
 ta = T\u00e2mil
 fa = Persa
