--- a/languagetool-language-modules/ro/src/main/resources/org/languagetool/MessagesBundle_ro.properties
+++ b/languagetool-language-modules/ro/src/main/resources/org/languagetool/MessagesBundle_ro.properties
@@ -188,6 +188,7 @@ guiNoSynonymsAsSuggestions = Do not use synonyms as suggestions (faster, regards
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
 guiEnableGoalSpecificRules = Enable goal specific rules
+guiFilterOverlappingMatches = Filter overlapping matches
 guiSaveCacheToFile = Save cache to file
 guiUseRemoteServer = Use remote server to check text
 guiUseServer = Use server:
