--- a/languagetool-language-modules/ru/src/main/resources/org/languagetool/MessagesBundle_ru.properties
+++ b/languagetool-language-modules/ru/src/main/resources/org/languagetool/MessagesBundle_ru.properties
@@ -188,6 +188,7 @@ guiNoSynonymsAsSuggestions = \u041d\u0435 \u0438\u0441\u043f\u043e\u043b\u044c\u
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
 guiEnableGoalSpecificRules = Enable goal specific rules
+guiFilterOverlappingMatches = Filter overlapping matches
 guiSaveCacheToFile = \u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u043a\u044d\u0448 \u0432 \u0444\u0430\u0439\u043b
 guiUseRemoteServer = \u0418\u0441\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u044c \u0432\u043d\u0435\u0448\u043d\u0438\u0439 \u0441\u0435\u0440\u0432\u0435\u0440 \u0434\u043b\u044f \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0438 \u0442\u0435\u043a\u0441\u0442\u0430
 guiUseServer = \u0418\u0441\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u044c \u0441\u0435\u0440\u0432\u0435\u0440:
