--- a/languagetool-language-modules/uk/src/main/resources/org/languagetool/MessagesBundle_uk.properties
+++ b/languagetool-language-modules/uk/src/main/resources/org/languagetool/MessagesBundle_uk.properties
@@ -188,6 +188,7 @@ guiNoSynonymsAsSuggestions = \u041d\u0435 \u0432\u0438\u043a\u043e\u0440\u0438\u
 guiIncludeTrackedChanges = Include tracked changes
 guiActivateTempOffRules = Enable temporarily disabled rules
 guiEnableGoalSpecificRules = Enable goal specific rules
+guiFilterOverlappingMatches = Filter overlapping matches
 guiSaveCacheToFile = \u0417\u0431\u0435\u0440\u0435\u0433\u0442\u0438 \u043a\u0435\u0448 \u0443 \u0444\u0430\u0439\u043b
 guiUseRemoteServer = \u041f\u0435\u0440\u0435\u0432\u0456\u0440\u044f\u0442\u0438 \u0442\u0435\u043a\u0441\u0442 \u0447\u0435\u0440\u0435\u0437 \u0432\u0456\u0434\u0434\u0430\u043b\u0435\u043d\u0438\u0439 \u0441\u0435\u0440\u0432\u0435\u0440
 guiUseServer = \u0412\u0438\u043a\u043e\u0440\u0438\u0441\u0442\u043e\u0432\u0443\u0432\u0430\u0442\u0438 \u0441\u0435\u0440\u0432\u0435\u0440:
